--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18",
     "react-wheel-of-prizes": "^1.0.9"
   },
