--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-custom-roulette": "^1.4.1",
-    "react-dom": "^18",
-    "react-wheel-of-prizes": "^1.0.9"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
